--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class='row'>
         <div class='col-xs-12'>
           <h3 class='section-header'>
-            <span>Client work</span>
+            <span>3:48 AM (Tampons NOW COMING SOON!!!)</span>
           </h3>
         </div>
       </div>
