--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     </div>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src='http://tether.io/dist/js/tether.js'></script>
     <script src="http://v4-alpha.getbootstrap.com/dist/js/bootstrap.min.js"></script>
     
     <script>
