--- a/index.html
+++ b/index.html
@@ -5,7 +5,85 @@
     <link href="http://v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
     <!--<link href="http://v4-alpha.getbootstrap.com/examples/cover/cover.css" rel="stylesheet">-->
     <link href="http://v4-alpha.getbootstrap.com/examples/blog/blog.css" rel="stylesheet">
-    <link href="custom.css" rel="stylesheet">
+    <!--     <link href="custom.css" rel="stylesheet"> -->
+    <style>
+html, body {
+    background-color: #f2f2f2;
+}
+body {
+    color: #616161;
+    font-family: -apple-system,".SFNSText-Regular","Helvetica Neue","Roboto","Segoe UI",sans-serif;
+}
+.blog-header h1 {
+    font-weight: 300;
+}
+.blog-masthead {
+    background-color: #fff;
+    box-shadow: none;
+}
+.nav-link {
+    color: rgba(0,0,0,0.6);
+    font-weight: 400;
+    text-transform: uppercase;
+}
+.nav-link.active {
+    color: rgba(0,0,0,0.8);
+    font-weight: 700;
+}
+.nav-link.active:after {
+    color: #f2f2f2;
+}
+.navbar-brand {
+    padding-top: 1rem;
+}
+.navbar-brand pre {
+    color: #57585a;
+    font-family: Consolas, Monaco, 'Andale Mono', monospace;
+    margin-bottom: 0;
+}
+.placeholders {
+    text-align: center;
+}
+.placeholders h4 {
+    margin-bottom: 0;
+}
+.placeholder img {
+    display: inline-block;
+    border-radius: 50%;
+}
+.section-header {
+    margin: -20px 0 40px 0;
+    font-size: 14px;
+    color: rgba(0, 0, 0, 0.2);
+    text-align: center;
+    overflow: hidden;
+    width: 100%;
+}
+.section-header span {
+    display: inline-block;
+    text-align: center;
+    text-transform: uppercase;
+    position: relative;
+}
+.section-header span:before {
+    left: -1010px;
+}
+.section-header span:after {
+    right: -1010px;
+}
+.section-header span:after, .section-header span:before {
+    content: " ";
+    display: block;
+    height: 1px;
+    width: 1000px;
+    background: rgba(0, 0, 0, 0.15);
+    position: absolute;
+    top: 50%;
+}
+.text-center {
+    text-align: center;
+}
+    </style>
   </head>
   
   <body>
