--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link href="http://v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
     <!--<link href="http://v4-alpha.getbootstrap.com/examples/cover/cover.css" rel="stylesheet">-->
-    <link href="http://v4-alpha.getbootstrap.com/examples/blog/blog.css" rel="stylesheet">
+    <link href="https://v4-alpha.getbootstrap.com/examples/blog/blog.css" rel="stylesheet">
     <!--     <link href="custom.css" rel="stylesheet"> -->
     <style>
 html, body {
