--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ body {
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src='http://tether.io/dist/js/tether.js'></script>
-    <script src="http://v4-alpha.getbootstrap.com/dist/js/bootstrap.min.js"></script>
+    <script src="https://v4-alpha.getbootstrap.com/dist/js/bootstrap.min.js"></script>
     
     <script>
       window.tumblrPosts  = {};
