--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ body {
     <div class="blog-masthead">
       <div class="container">
         <nav class="nav blog-nav">
-          <a class='navbar-brand'><pre>&lt;code> 🐵 &lt;/code></pre></a>
+          <a class='navbar-brand'><pre>&lt;code> 🐵ᕗ ─=≡ΣO))  x⸑x &lt;/code></pre></a>
           <a class="nav-link active" href="#">Work</a>
           <a class="nav-link" href="#">Blog</a>
           <a class="nav-link" href="#">Contact</a>
