--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ body {
         <nav class="nav blog-nav">
           <a class='navbar-brand'><pre>&lt;code> 🐵ᕗ ─=≡ΣO))  x⸑x &lt;/code></pre></a>
           <a class="nav-link active" href="#">Work</a>
-          <a class="nav-link" href="#">Blog</a>
+          <a class="nav-link" href="https://codemonkeygames.tumblr.com">Blog</a>
           <a class="nav-link" href="#">Contact</a>
         </nav>
       </div>
@@ -109,7 +109,7 @@ body {
       <div class='row'>
         <div class='col-xs-12'>
           <h3 class='section-header'>
-            <span>3:48 AM (Tampons NOW COMING SOON!!!)</span>
+            <span>.: 062920 :. RonaGun demo coming 7/04!!!</span>
           </h3>
         </div>
       </div>
@@ -130,9 +130,9 @@ body {
           <span class="text-muted">Something else</span>
         </div>
         <div class="col-xs-6 col-sm-3 placeholder">
-          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
+          <img src="//img1.ak.crunchyroll.com/i/spire4/d16983e1b53d44288b0757e0ce8ca90b1310737785_large.png" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
           <h4>Label</h4>
-          <span class="text-muted">Something else</span>
+          <span class="text-muted">RonaGun</span>
         </div>
       </div>
     </div>
