--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@ body {
         </div>
         <div class="col-xs-6 col-sm-3 placeholder">
           <img src="//img1.ak.crunchyroll.com/i/spire4/d16983e1b53d44288b0757e0ce8ca90b1310737785_large.png" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
-          <h4>Label</h4>
-          <span class="text-muted">RonaGun</span>
+          <h4>RonaGun</h4>
+          <span class="text-muted">Something else</span>
         </div>
       </div>
     </div>
