--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ body {
       <div class="container">
         <nav class="nav blog-nav">
           <a class='navbar-brand'><pre>&lt;code> 🐵ᕗ ─=≡ΣO))  x⸑x &lt;/code></pre></a>
-          <a class="nav-link active" href="#">Work</a>
+          <a class="nav-link active" href="https://Community43.org/gd">Work</a>
           <a class="nav-link" href="https://codemonkeygames.tumblr.com">Blog</a>
           <a class="nav-link" href="#">Contact</a>
         </nav>
